# desafio-aiqfome

./: .dockerignore  Dockerfile  Justificativas.txt  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
catalog/: urls.py  views.py
catalog/application/: __init__.py  search_use_cases.py
catalog/domain/: __init__.py  entities.py  interfaces.py
catalog/infrastructure/: __init__.py  elasticsearch_service.py
catalog/interfaces/: serializers.py  views.py
catalog/tests/: test_elasticsearch_service.py  test_search_api.py  test_search_use_case.py
config/: settings.py  urls.py
scripts/: entrypoint.sh  seed_elasticsearch.py
user/: admin.py  models.py  urls.py  views.py
user/application/: __init__.py  favorite_use_cases.py  use_cases.py
user/domain/: __init__.py  entities.py  exceptions.py  interfaces.py
user/infrastructure/: __init__.py  product_gateway.py  repositories.py
user/interfaces/: __init__.py  serializers.py  views.py
user/migrations/: 0001_initial.py  0002_favorite_favorite_unique_customer_favorite.py
user/tests/: test_customer_api.py  test_customer_model.py  test_customer_use_cases.py  test_favorite_api.py  test_favorite_model.py  test_favorite_use_cases.py
