[tool.poetry]
name = "desafio-aiqfome"
version = "0.1.0"
description = ""
authors = ["mr-andor <geriath@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.2.7"
psycopg = {extras = ["binary"], version = "^3.1"}
python-dotenv = "^1.0.1"
elasticsearch = "^8.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
